--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Erwin de Haan's Blog
+description: Ramblings, mostly
+meta_description: "Erwin de Haan's Blog, Ramblings, mostly"
 
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 logo: false
 paginate: 15
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
+domain_name: 'http://erwindehaan.com'
 google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate]
 
 # Details for the RSS feed generator
-url:            'blog url'
-author:         'Your Name'
+url:            'http://erwindehaan.com/'
+author:         'Erwin de Haan'
