Cleaned up and changed the permalink style.

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ name: Erwin de Haan's Blog
 description: Ramblings, mostly
 meta_description: "Erwin de Haan's Blog, Ramblings, mostly"
 
+permalink: date
 markdown: kramdown
 highlighter: rouge
 logo: false
